# controllers/medical.go
@@ -9,44 +9,44 @@ import (
 	beego "github.com/beego/beego/v2/server/web"
 )
 
-// WristbandController Operations about wristband
-type WristbandController struct {
+// MedicalController Operations about medical
+type MedicalController struct {
 	beego.Controller
 }
 
 // Post @Title Create
-// @Description create wristband
-// @Param	body		body 	models.Wristband true		"The wristband content"
+// @Description create medical
+// @Param	body		body 	models.Medical true		"The medical content"
 // @Success 200
 // @Failure 403 body is empty
 // @router / [post]
-func (o *WristbandController) Post() {
+func (o *MedicalController) Post() {
 	paramData := o.Ctx.Input.RequestBody
-	var w models.Wristband
-	err1 := json.Unmarshal(paramData, &w)
+	var m models.Medical
+	err1 := json.Unmarshal(paramData, &m)
 	if err1 != nil {
 		fmt.Println("json.Unmarshal is err1:", err1.Error())
 	} else {
-		service.AddWristband(w)
+		service.AddMedical(m)
 	}
-	var wd models.WristbandInfo
-	err2 := json.Unmarshal(paramData, &wd)
+	var md models.MedicalInfo
+	err2 := json.Unmarshal(paramData, &md)
 	if err2 != nil {
 		fmt.Println("json.Unmarshal is err2:", err2.Error())
 	} else {
-		service.SaveWristbandInfo(wd)
+		service.SaveMedicalInfo(md)
 	}
 }
 
 // Get @Title Get
-// @Description find wristband by deviceNo
+// @Description find medical by deviceNo
 // @Param	deviceNo		path 	string	true		"the deviceNo you want to get"
-// @Success 200 {wristband} models.Object
+// @Success 200 {medical} models.Object
 // @Failure 403 :deviceNo is empty
 // @router /:deviceNo [get]
-func (o *WristbandController) Get() {
+func (o *MedicalController) Get() {
 	deviceNo := o.Ctx.Input.Param(":deviceNo")
-	info := service.QueryWristband(deviceNo)
+	info := service.QueryMedical(deviceNo)
 	o.Data["json"] = info
 	_ = o.ServeJSON()
 }
