# controllers/sleep_report.go
@@ -9,44 +9,44 @@ import (
 	beego "github.com/beego/beego/v2/server/web"
 )
 
-// WristbandController Operations about wristband
-type WristbandController struct {
+// SleepReportController Operations about sleep_report
+type SleepReportController struct {
 	beego.Controller
 }
 
 // Post @Title Create
-// @Description create wristband
-// @Param	body		body 	models.Wristband true		"The wristband content"
+// @Description create sleep_report
+// @Param	body		body 	models.SleepReport true		"The sleep_report content"
 // @Success 200
 // @Failure 403 body is empty
 // @router / [post]
-func (o *WristbandController) Post() {
+func (o *SleepReportController) Post() {
 	paramData := o.Ctx.Input.RequestBody
-	var w models.Wristband
-	err1 := json.Unmarshal(paramData, &w)
+	var sr models.SleepReport
+	err1 := json.Unmarshal(paramData, &sr)
 	if err1 != nil {
 		fmt.Println("json.Unmarshal is err1:", err1.Error())
 	} else {
-		service.AddWristband(w)
+		service.AddSleepReport(sr)
 	}
-	var wd models.WristbandInfo
-	err2 := json.Unmarshal(paramData, &wd)
+	var srd models.SleepReportInfo
+	err2 := json.Unmarshal(paramData, &srd)
 	if err2 != nil {
 		fmt.Println("json.Unmarshal is err2:", err2.Error())
 	} else {
-		service.SaveWristbandInfo(wd)
+		service.SaveSleepReportInfo(srd)
 	}
 }
 
 // Get @Title Get
-// @Description find wristband by deviceNo
+// @Description find sleep_report by deviceNo
 // @Param	deviceNo		path 	string	true		"the deviceNo you want to get"
-// @Success 200 {wristband} models.Object
+// @Success 200 {sleep_report} models.Object
 // @Failure 403 :deviceNo is empty
 // @router /:deviceNo [get]
-func (o *WristbandController) Get() {
+func (o *SleepReportController) Get() {
 	deviceNo := o.Ctx.Input.Param(":deviceNo")
-	info := service.QueryWristband(deviceNo)
+	info := service.QuerySleepReport(deviceNo)
 	o.Data["json"] = info
 	_ = o.ServeJSON()
 }
