# controllers/sleep_sign.go
@@ -9,44 +9,44 @@ import (
 	beego "github.com/beego/beego/v2/server/web"
 )
 
-// WristbandController Operations about wristband
-type WristbandController struct {
+// SleepSignController Operations about sleep_sign
+type SleepSignController struct {
 	beego.Controller
 }
 
 // Post @Title Create
-// @Description create wristband
-// @Param	body		body 	models.Wristband true		"The wristband content"
+// @Description create sleep_sign
+// @Param	body		body 	models.SleepSign true		"The sleep_sign content"
 // @Success 200
 // @Failure 403 body is empty
 // @router / [post]
-func (o *WristbandController) Post() {
+func (o *SleepSignController) Post() {
 	paramData := o.Ctx.Input.RequestBody
-	var w models.Wristband
-	err1 := json.Unmarshal(paramData, &w)
+	var ss models.SleepSign
+	err1 := json.Unmarshal(paramData, &ss)
 	if err1 != nil {
 		fmt.Println("json.Unmarshal is err1:", err1.Error())
 	} else {
-		service.AddWristband(w)
+		service.AddSleepSign(ss)
 	}
-	var wd models.WristbandInfo
-	err2 := json.Unmarshal(paramData, &wd)
+	var ssd models.SleepSign
+	err2 := json.Unmarshal(paramData, &ssd)
 	if err2 != nil {
 		fmt.Println("json.Unmarshal is err2:", err2.Error())
 	} else {
-		service.SaveWristbandInfo(wd)
+		service.AddSleepSign(ssd)
 	}
 }
 
 // Get @Title Get
-// @Description find wristband by deviceNo
+// @Description find sleep_sign by deviceNo
 // @Param	deviceNo		path 	string	true		"the deviceNo you want to get"
-// @Success 200 {wristband} models.Object
+// @Success 200 {sleep_sign} models.Object
 // @Failure 403 :deviceNo is empty
 // @router /:deviceNo [get]
-func (o *WristbandController) Get() {
+func (o *SleepSignController) Get() {
 	deviceNo := o.Ctx.Input.Param(":deviceNo")
-	info := service.QueryWristband(deviceNo)
+	info := service.QuerySleepSign(deviceNo)
 	o.Data["json"] = info
 	_ = o.ServeJSON()
 }
